# rokey_c3_mini

./: README.md
Detection/: package.xml
mini_project/map/: best_1.json  best_2.json  map.pgm
mini_project/mini_project/detection/: ImageConvertor.py
mini_project/mini_project/navigation/: FollowingCar.py  FollowingCar_v1.py
src/: import json.py
src/Detection/: setup.cfg  setup.py
src/Detection/Detection/: image_sub_pub.py
src/controller/: package.xml  setup.py
src/controller/controller/: goal_manager _v1.py  goal_manager.py
src/detection/: package.xml  setup.py
src/detection/detection/: QRDetection.py  detectionManager.py  displayManager.py  goal_manager.py  test_image_publisher.py  trackingManager.py
src/detection/launch/: detection.py
src/mini_project/: package.xml  setup.py
src/mini_project/detection/: DetectionManager.py  DisplayManager.py  QRDetection.py
src/mini_project/launch/: detection_system.launch.py  navigation_system.launch.py  setting_system.launch.py
src/mini_project/map/: best_1.json  best_2.json  best_3.json  map.pgm  map.yaml  map_old.pgm
src/mini_project/param/: mini_project.yaml
src/qr_detector_camera/: package.xml  setup.cfg  setup.py
src/qr_detector_camera/qr_detector_camera/: qr_detector_camera_node.py  qr_detector_webcam.py  test_server.py
src/qr_interfaces/: CMakeLists.txt  package.xml
src/qr_interfaces/msg/: QRInfo.msg
src/qr_interfaces/srv/: GetTargetRoom.srv  Step.srv
src/test_website/: TaskManager.py  app.py  test.db  test_webcam.py
src/test_website/templates/: dashboard.html  login.html  logs.html
(+14 files in other folders)
