<?xml version="1.0"?>
<package format="3">
  <name>qr_interfaces</name>
  <version>0.0.0</version>
  <description>Custom message and service interface for QR detection</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ✅ 이 줄을 꼭 추가해야 합니다 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

